<resources>
    <string name="launching_twitter_authorisation_come_back_and_tweet_after_you_have_done_this_">Launching Twitter authorisation. Come back and tweet after you have done this.</string>
    <string name="video_is_not_uploaded_yet_no_hosted_url_available_">Video is not uploaded yet. No hosted URL available.</string>
	<string name="tweeted_ok">Tweeted video URL successfully</string>
	<string name="tweeting_starting">Contacting twitter.com</string>
	<string name="tweeting_deauth">Removing twitter authorisation</string>
	<string name="twitter_authorisation_successfully">Twitter authorisation successful</string>
	<string name="automatic_email_from">noreply@vidiom.mobi</string>
	<string name="vidiom_automatic_email">Vidiom automatic email</string>
    <string name="url_of_hosted_video_is_">URL of  hosted video is  </string>
    <string name="uploaded_by_">Uploaded by Vidiom - your wandering eye : http://vidiom.net.au/ </string>
    <string name="upload_to_facebook_failed_">Upload to Facebook failed.</string>
    <string name="upload_to_facebook_succeeded_">Upload to Facebook succeeded.</string>
    <string name="upload_to_videobin_org_failed_">Upload to videobin.org failed.</string>
    <string name="upload_to_videobin_org_succeeded_">Upload to videobin.org succeeded.</string>
    <string name="upload_to_ftp_host_succeeded_">Upload to FTP host succeeded.</string>
    <string name="upload_to_ftp_host_failed_">Upload to FTP host failed.</string>
    <string name="upload_to_youtube_host_succeeded_">Upload to Youtube succeeded.</string>
    <string name="upload_to_youtube_host_failed_">Upload to Youtube failed.</string>
    <string name="auto_publishing_to_youtube_com">Auto publishing to youtube.com</string>
    <string name="auto_publishing_to_facebook_com">Auto publishing to facebook.com</string>
    <string name="auto_publishing_to_ftp_server">Auto publishing to FTP server</string>
    <string name="auto_publishing_to_videobin_org">Auto publishing to videobin.org</string>
	<string name="starting_upload">Starting upload to </string>
	<string name="rootSDcardFolder">/Vidiom</string>
	<string name="defaultVideoFilenamePrefix">video</string>
    <string name="video_bin_API_api">api</string>
    <string name="video_bin_API_title">title</string>
    <string name="video_bin_API_description">description</string>
    <string name="video_bin_API_videofile">videoFile</string>
    <string name="http_videobin_org_add">http://videobin.org/add</string>
    <string name="video_bin_API_good_re">http://videobin.org/.*</string>
    <string name="maxFilesizePreferenceDefault">10240</string>
    <string name="maxFilesizePreferenceSummary">Maximum video filesize in kilobytes. Zero for unlimited.</string>
    <string name="maxFilesizePreferenceTitle">Video Filesize</string>
    <string name="maxDurationPreferenceDefault">150</string>
    <string name="maxDurationPreferenceSummary">Maximum duration for a recorded video in seconds. Zero for unlimited.</string>
    <string name="maxDurationPreferenceTitle">Recording Duration</string>
    <string name="defaultFTPpasswordPreferenceTitle">FTP host password</string>
    <string name="defaultFTPusernamePreferenceTitle">FTP host username</string>
    <string name="defaultFTPhostPreferenceSummary">The domain name of the FTP host</string>
    <string name="defaultFTPhostPreferenceTitle">FTP hostname</string>
    <string name="filenameConventionDefaultPreference">date</string>
    <string name="filenameConventionPreferenceSummary">Choose the style of recorded video filenames</string>
    <string name="filenameConventionPreferenceTitle">Video Filename Style</string>
    <string name="filenameConventionPreferenceDialogTitle">Video Filename Style</string>
    <string name="videobinPreferenceSummary">Automatically publish video to videobin.org?</string>
    <string name="videobinPreferenceTitle">Videobin.org</string>
    <string name="facebookPreferenceSummary">Automatically publish video to facebook.com?</string>
    <string name="facebookPreferenceTitle">Facebook</string>
    <string name="youtubePreferenceSummary">Automatically publish video to youtube.com?</string>
    <string name="youtubePreferenceTitle">Youtube</string>
    <string name="twitterPreferenceSummary">Automatically publish hosted video URL on twitter.com?</string>
    <string name="twitterPreferenceTitle">Twitter</string>
    <string name="ftpPreferenceSummary">Automatically send video via FTP to server?</string>
    <string name="ftpPreferenceTitle">FTP video</string>
    <string name="autoEmailPreferenceSummary">Automatically launch email application after finishing recording with captured video as attachment?</string>
    <string name="autoEmailPreferenceTitle">Email video</string>
    <string name="emailPreferenceSummary">Enter your email to receive notifications of video publishing</string>
    <string name="emailTitle">Email Address</string>
    <string name="defaultVideosFolderTitle">Change Videos Folder</string>
    <string name="defaultVideosFolder">defaultVideosFolder</string>
    <string name="customVideoFolderPreference">customVideoFolderPreference</string>
    <string name="automaticPreferencesScreenTitle">Automatic Publishing Options</string>
    <string name="ftpPreferencesScreenTitle">FTP Publishing Details</string>
    <string name="videoRecordingOptionsPreferencesScreenTitle">Video Recording Options</string>
    <string name="youtubeOptionsPreferencesScreenTitle">YouTube Options</string>
   	<string name="defaultYouTubePrivatePreferenceSummary">Uploaded videos are set as private?</string>
    <string name="defaultYouTubePrivatePreferenceTitle">YouTube videos privacy</string>
    <string name="app_name">Vidiom</string>
    <string name="app_description">Your wandering eye.</string>
    <string name="prefTitle">Vidiom : Preferences</string>
	<string name="libraryTitle">Vidiom : Video gallery</string>
	<string name="galleryTitle">Vidiom : Video gallery</string>
	<string name="twitterTitle">Vidiom : Authorise Twitter integration</string>
	<string name="twitter_auth">Authorise twitter</string>
	<string name="twitter_deauth">De-authorise twitter</string>
	<string name="about_this">Vidiom - Video capture and web video publishing tool. VERSION \nhttp://vidiom.net.au \nAuthor: Andy Nicholson.\nCopyright 2012 Infinite Recursion Pty. Ltd.\nhttp://www.infiniterecursion.com.au </string>
	<string name="licenses">Show Licenses</string>
	<string name="third_party_licenses">\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful,but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see http://www.gnu.org/licenses\n\nVidiom source code available at https://github.com/andynicholson/Vidiom\n\nVidiom contains third-party code under separate copyright licenses:\n\nCopyright 2010 Google Inc.\nCode modified from ytd-android - http://code.google.com/p/youtube-direct &amp; available under the license http://www.apache.org/licenses/LICENSE-2.0\n\nCopyright 2010 Stickman studio Contributers.\nCode modified from stickman-android - http://code.google.com/p/stickman-android &amp; available under the license http://www.apache.org/licenses/LICENSE-2.0\n\nCopyright 2010 Facebook Inc.\nCode modified from Facebook SDK for Android - https://github.com/facebook/facebook-android-sdk &amp; available under the license http://www.apache.org/licenses/LICENSE-2.0.html\n\nCopyright (c) 2007-2011, Yusuke Yamamoto\nCode modified from Twitter4J - http://twitter4j.org/en/index.html &amp; available under the BSD license http://twitter4j.org/en/index.html#license\n\nCopyright 2011 Matthias Käppler\nCode included from Signpost - http://code.google.com/p/oauth-signpost &amp; available under the license http://www.apache.org/licenses/LICENSE-2.0.html\n\nCopyright 2012 Project contributors\nCode included from android-file-dialog - http://code.google.com/p/android-file-dialog &amp; available under the license http://www.opensource.org/licenses/bsd-license.php\n\nCopyright 2012 tittel@kom.e-technik.tu-darmstadt.de\nCode included from range-seek-bar - http://code.google.com/p/range-seek-bar/ &amp; available under the license http://www.apache.org/licenses/LICENSE-2.0\n\nCopyright 2012 Nick Howes\nCode included from android-ffmpeg-x264 - https://github.com/andynicholson/android-ffmpeg-x264  (Vidiom branch of build system)\nThis build system includes FFmpeg and x264 built using the Android NDK - see http://ffmpeg.org/ - FFmpeg available under the GPL license http://ffmpeg.org/legal.html\n\nCopyright 2012 Jigsoar icons\nHandcrafted by Benjamin Humphrey for Jigsoar Licensed under Creative Commons Attribution 3.0\nwww.jigsoaricons.com www.jigsoar.com For any questions, contact Benjamin Humphrey at: www.humphreybc.com</string>
	 <string name="help">Help</string>
	 <string name="helpText">To start and stop recording you can tap on the red text overlay on the preview window, or use the Menu key to access Record/Stop buttons.\n\nTo upload recorded videos to videobin.org, YouTube, Facebook or to a custom FTP server use the Gallery menu option, accessed via the Menu key. You can also watch the video with the inbuilt video player, trim the video via an in-build video editor, edit the title and description, email the video as an attachment to somebody, email or tweet the hosted URL of an uploaded video, view the hosted URL in a browser, or delete the video. \n\nTo set recording duration and file size limits, email address, FTP server details, as well as any automatic uploads of recorded videos, use the Preferences menu option, accessed via the Menu key.\n\nTo setup Twitter authorisation, or remove it, go to the Gallery, and use the Menu keys to access the Twitter options.\n\nGet more support at http://vidiom.net.au/</string>
	<string name="notification_title">Vidiom</string>
    <string name="camera_failed">The camera failed to start recording. Sorry. Please check your Video Recording Quality settings in the Preferences.</string>
    <string name="sdcard_failed">The SD card access failed, so we can not record videos. Sorry.</string>
    <string name="cancel">Cancel</string>
    <string name="yes">OK</string>
    <string name="notrecording">You are not recording video.</string>
    <string name="haventrecorded">You have not recorded any video yet.</string>
    <string name="stop_recording_to_send">You are still recording video. Please stop recording first, then send.</string>
    <string name="cant_find_upload_host">We can not connect to the video hosting service. Check your preferences please.</string>
    <string name="cant_login_upload_host">We can not login to your account on the video hosting service. Sorry. Check your FTP host username and password preferences please.</string>
    <string name="file_saved">Recording finished. Video file is in the Gallery as </string>
    <string name="file_transcoded">Transcoding finished. A new video file is in the Gallery as </string>
	<string name="posts_in_gallery">You can upload this video via the Gallery.</string>
	<string name="text1intro">Filename : </string>
	<string name="text2intro">Duration (seconds) : </string>
	<string name="text3intro">Date Filmed : </string>
	<string name="text4intro">Hosted details : </string>
	<string name="text5intro">Title : </string>
	<string name="text6intro">Description : </string>
	<string name="text7intro">File size (KB) :</string>
	<string name="video_thumbnail">video thumbnail</string>
</resources>