<?xml version="1.0" encoding="utf-8"?>
	<!--
		/* * Vidiom XML * * AUTHORS: * * Andy Nicholson * * 2010 * Copyright
		Infinite Recursion Pty Ltd. * http://www.infiniterecursion.com.au */
	-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/videoThumbnailimageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dip"
        android:contentDescription="@string/video_thumbnail"
        android:src="@drawable/icon" >
    </ImageView>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/videoThumbnailimageView"
        android:orientation="vertical"
        android:padding="3dp" >

        <!-- title -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text5intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text5intro"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- description -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text6intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text6intro"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- filename -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text1intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1intro"
                android:textSize="14sp" />

            <TextView
                android:id="@android:id/text1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- file size -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text7intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text7intro"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <!-- duration -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text2intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text2intro"
                android:textSize="14sp" />

            <TextView
                android:id="@android:id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Date filmed -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text3intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text3intro"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Host details -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text4intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text4intro"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </LinearLayout>
        
            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:max="100" />

            <TextView
                android:id="@+id/textPB1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        
    </LinearLayout>



</RelativeLayout>
